--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,16 @@
+def localProperties = new Properties()
+def localPropertiesFile = rootProject.file('local.properties')
+if (localPropertiesFile.exists()) {
+    localPropertiesFile.withReader('UTF-8') { reader ->
+        localProperties.load(reader)
+    }
+}
+
+def flutterRoot = localProperties.getProperty('flutter.sdk')
+if (flutterRoot == null) {
+    throw new GradleException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
+}
+
 group 'io.ardelias.blueberry'
 version '0.0.1'
 
@@ -41,12 +54,13 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 18
     }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.annotation:annotation:1.3.0"
     // TODO: remove that dev dependency useful to avoid missing Flutter classes
-    implementation files('D:\\Dev\\sdk\\flutter\\bin\\cache\\artifacts\\engine\\android-x64\\flutter.jar')
+    implementation files("$flutterRoot\\bin\\cache\\artifacts\\engine\\android-x64\\flutter.jar")
 }
